# cppReview

./: .gitignore  CMakeLists.txt  main.cpp
Birds/: Bird.h  FlyingBird.h
Shapes/: NotDerivedRectangle.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapesComposition.h  Square.cpp  Square.h
Templates/: ArrayOf2.h  Ratio.h  Swap12.h
Templates/Specialization/: Ratio.h
Templates/Variadic/: Group.h
